--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://rayaljomy_db_user:DRWGRRqDasgkvqnU@backenddb.3hhr3v4.mongodb.net/CSV-Users?appName=backendDB
-JWT_SECRET=George
+MONGODB_URI=mongodb://127.0.0.1:27017/your_database_name
+JWT_SECRET=your_jwt_secret_key_here
