--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
-MONGODB_URI=mongodb://127.0.0.1:27017/your_database_name
-JWT_SECRET=your_jwt_secret_key_here
+MONGODB_URI=mongodb://127.0.0.1:27017/database_name
+JWT_SECRET=secret_key
+
