--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://rayaljomy_db_user:DRWGRRqDasgkvqnU@backenddb.3hhr3v4.mongodb.net/CSV-Users?appName=backendDB
-JWT_SECRET=George
+MONGODB_URI=mongoserver://12.00.12.17/?appName=backendDB
+JWT_SECRET= Key
+
